@@ -9,12 +9,13 @@ our $VERSION = '0.12';
 
 my %_PARSER_FOR;
 my %REGEX_FOR = (
-    html      => qr{x?html?},
-    markdown  => qr{md|mkdn?|mdown|markdown},
-    pod       => qr{p(?:od|m|l)},
-    textile   => qr{textile},
-    trac      => qr{tra?c},
-    mediawiki => qr{(?:m(?:edia)?)?wiki},
+    html          => qr{x?html?},
+    markdown      => qr{m(?:d(?:own)?|kdn?|arkdown)},
+    multimarkdown => qr{mm(?:d(?:own)?|kdn?|arkdown)},
+    pod           => qr{p(?:od|m|l)},
+    textile       => qr{textile},
+    trac          => qr{tra?c},
+    mediawiki     => qr{(?:m(?:edia)?)?wiki},
 );
 
 sub register {
@@ -118,6 +119,8 @@ This distribution includes support for a number of markup formats:
 =item * L<HTML|http://whatwg.org/html>
 
 =item * L<Markdown|http://daringfireball.net/projects/markdown/>
+
+=item * L<MultiMarkdown|http://fletcherpenney.net/multimarkdown/>
 
 =item * L<MediaWiki|http://en.wikipedia.org/wiki/Help:Contents/Editing_Wikipedia>
 
