@@ -5,6 +5,7 @@ use warnings;
 use Test::More 0.96;
 use Text::Markup;
 use File::Spec::Functions qw(catfile);
+use Carp;
 
 sub slurp($) {
     my $file = shift;
@@ -52,3 +53,4 @@ pod,Text::Markup::Pod,Pod::Simple::XHTML 3.15,pod,pm,pl
 trac,Text::Markup::Trac,Text::Trac 0.10,trac,trc
 textile,Text::Markup::Textile,Text::Textile 2.10,textile
 mediawiki,Text::Markup::Mediawiki,Text::MediawikiFormat 1.0,wiki,mwiki,mediawiki
+multimarkdown,Text::Markup::Multimarkdown,Text::MultiMarkdown 1.000033,mmd,mmkdn,mmkd,mmdown,mmarkdown
