@@ -2,6 +2,7 @@ Revision history for Perl extension Text-Markup.
 
 0.12
       - Documented that the `file` parameter to `parse()` is required.
+      - Added MultiMarkdown support.
 
 0.11  2011-02-22T22:41:15
       - Added list of supported markups to the README.
